--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@ footer {
    border-radius: 8px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); */
    text-align: left;
-   overflow: auto;
+   overflow: scroll;
     max-height: calc(100vh - 170px);
 }
 
